[+] Added running JShell snippets and files